fix: update style overflow

--- a/components/RewardGameCard/styles.module.scss
+++ b/components/RewardGameCard/styles.module.scss
@@ -30,7 +30,7 @@
   }
 
   .gameContent {
-    padding: 1.33rem 1.33rem 1.42rem;
+    padding: 1.33rem 1.33rem 1.42rem !important;
 
     .cardTitle {
       p {
